update offscreen navigation issue

--- a/source/assets/styles/global/_reset-custom.scss
+++ b/source/assets/styles/global/_reset-custom.scss
@@ -3,6 +3,7 @@ body {
 	color: $white;
 	font-family: $brand-font-heebo;
 	font-size: $font-size-16;
+	overflow-x: hidden;
 }
 
 main {
